--- a/views/friends.erb
+++ b/views/friends.erb
@@ -9,7 +9,7 @@
   <body>
     <h1>My Super Cool Friends List</h1>
 
-    <!-- Iterate through the @friends array here to display each item in its own <h2> tag -->
+    <h2><%= @friends.each {|friend| friend}%></h2>
 
   </body>
 </html>
