Automatically backed up by Learn

--- a/views/friends.erb
+++ b/views/friends.erb
@@ -9,7 +9,9 @@
   <body>
     <h1>My Super Cool Friends List</h1>
 
-    <h2><%= @friends.each {|friend| friend}%></h2>
+    <% @friends.each do |friend| %>
+      <h2><%= friend %></h2>
+    <% end %>
 
   </body>
 </html>
